example/lib/src/generated/errors/errors_localization_ms.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Malay (`ms`).
class ErrorsLocalizationMs extends ErrorsLocalization {
  ErrorsLocalizationMs([String locale = 'ms']) : super(locale);

  @override
  String get error => 'Ralat berlaku';

  @override
  String get unexpectedError => 'Ralat yang tidak dijangka berlaku';

  @override
  String get bugReportSentText => 'Laporan bug telah dihantar dengan jayanya.';
}
